@@ -21,9 +21,7 @@
 package net.sourceforge.atunes.kernel.modules.search;
 
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 
 import net.sourceforge.atunes.model.ILocalAudioObject;
 import net.sourceforge.atunes.model.IUnknownObjectChecker;
@@ -85,10 +83,6 @@ public class AttributesList {
 	/** The Constant INDEX_FIELD_URL. */
 	private static final String INDEX_FIELD_URL = "url";
 
-	private List<String> attributes;
-
-	private Set<String> numericalAttributes;
-
 	private IUnknownObjectChecker unknownObjectChecker;
 
 	/**
@@ -100,77 +94,200 @@ public class AttributesList {
 	}
 
 	final List<String> getSearchableAttributes() {
-		if (this.attributes == null) {
-			this.attributes = new ArrayList<String>();
-			this.attributes.add(INDEX_FIELD_TITLE);
-			this.attributes.add(INDEX_FIELD_TRACK_NUMBER);
-			this.attributes.add(INDEX_FIELD_ARTIST);
-			this.attributes.add(INDEX_FIELD_ALBUM_ARTIST);
-			this.attributes.add(INDEX_FIELD_ALBUM);
-			this.attributes.add(INDEX_FIELD_COMPOSER);
-			this.attributes.add(INDEX_FIELD_YEAR);
-			this.attributes.add(INDEX_FIELD_GENRE);
-			this.attributes.add(INDEX_FIELD_DURATION);
-			this.attributes.add(INDEX_FIELD_BITRATE);
-			this.attributes.add(INDEX_FIELD_FREQUENCY);
-			this.attributes.add(INDEX_FIELD_SCORE);
-			this.attributes.add(INDEX_FIELD_FILENAME);
-			this.attributes.add(INDEX_FIELD_LYRICS);
-			this.attributes.add(INDEX_FIELD_URL);
-		}
-		return this.attributes;
-	}
-
-	final boolean isNumericAttribute(final String attribute) {
-		if (this.numericalAttributes == null) {
-			this.numericalAttributes = new HashSet<String>();
-			this.numericalAttributes.add(INDEX_FIELD_TRACK_NUMBER);
-			this.numericalAttributes.add(INDEX_FIELD_YEAR);
-			this.numericalAttributes.add(INDEX_FIELD_BITRATE);
-			this.numericalAttributes.add(INDEX_FIELD_FREQUENCY);
-			this.numericalAttributes.add(INDEX_FIELD_SCORE);
-		}
-		return this.numericalAttributes.contains(attribute);
+		List<String> attributes = new ArrayList<String>();
+		attributes.add(INDEX_FIELD_TITLE);
+		attributes.add(INDEX_FIELD_TRACK_NUMBER);
+		attributes.add(INDEX_FIELD_ARTIST);
+		attributes.add(INDEX_FIELD_ALBUM_ARTIST);
+		attributes.add(INDEX_FIELD_ALBUM);
+		attributes.add(INDEX_FIELD_COMPOSER);
+		attributes.add(INDEX_FIELD_YEAR);
+		attributes.add(INDEX_FIELD_GENRE);
+		attributes.add(INDEX_FIELD_DURATION);
+		attributes.add(INDEX_FIELD_BITRATE);
+		attributes.add(INDEX_FIELD_FREQUENCY);
+		attributes.add(INDEX_FIELD_SCORE);
+		attributes.add(INDEX_FIELD_FILENAME);
+		attributes.add(INDEX_FIELD_LYRICS);
+		attributes.add(INDEX_FIELD_URL);
+		return attributes;
 	}
 
 	final void addFieldsToDocument(final Document d,
 			final ILocalAudioObject audioFile) {
-		d.add(new Field(INDEX_FIELD_TITLE, audioFile.getTitle(),
-				Field.Store.YES, Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_TRACK_NUMBER, String.valueOf(audioFile
-				.getTrackNumber()), Field.Store.YES, Field.Index.NOT_ANALYZED));
-		d.add(new Field(INDEX_FIELD_ARTIST, audioFile
-				.getArtist(this.unknownObjectChecker), Field.Store.YES,
-				Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_ALBUM_ARTIST, audioFile
-				.getAlbumArtist(this.unknownObjectChecker), Field.Store.YES,
-				Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_ALBUM, audioFile
-				.getAlbum(this.unknownObjectChecker), Field.Store.YES,
-				Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_COMPOSER, audioFile.getComposer(),
-				Field.Store.YES, Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_YEAR, audioFile.getYear(), Field.Store.YES,
-				Field.Index.NOT_ANALYZED));
-		d.add(new Field(INDEX_FIELD_GENRE, audioFile
-				.getGenre(this.unknownObjectChecker), Field.Store.YES,
-				Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_DURATION, String.valueOf(audioFile
-				.getDuration()), Field.Store.YES, Field.Index.NOT_ANALYZED));
-		d.add(new Field(INDEX_FIELD_BITRATE, String.valueOf(audioFile
-				.getBitrate()), Field.Store.YES, Field.Index.NOT_ANALYZED));
-		d.add(new Field(INDEX_FIELD_FREQUENCY, String.valueOf(audioFile
-				.getFrequency()), Field.Store.YES, Field.Index.NOT_ANALYZED));
-		d.add(new Field(INDEX_FIELD_SCORE,
-				String.valueOf(audioFile.getStars()), Field.Store.YES,
-				Field.Index.NOT_ANALYZED));
-		d.add(new Field(INDEX_FIELD_LYRICS, audioFile.getLyrics(),
-				Field.Store.YES, Field.Index.ANALYZED));
-		d.add(new Field(INDEX_FIELD_FILENAME, audioFile
-				.getNameWithoutExtension(), Field.Store.YES,
-				Field.Index.ANALYZED));
+		indexTitle(d, audioFile);
+		indexTrackNumber(d, audioFile);
+		indexArtist(d, audioFile);
+		indexAlbumArtist(d, audioFile);
+		indexAlbum(d, audioFile);
+		indexComposer(d, audioFile);
+		indexYear(d, audioFile);
+		indexGenre(d, audioFile);
+		indexDuration(d, audioFile);
+		indexBitrate(d, audioFile);
+		indexFrequency(d, audioFile);
+		indexScore(d, audioFile);
+		indexLyrics(d, audioFile);
+		indexFilename(d, audioFile);
+		indexUrl(d, audioFile);
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexUrl(final Document d, final ILocalAudioObject audioFile) {
 		d.add(new Field(INDEX_FIELD_URL, audioFile.getUrl(), Field.Store.YES,
 				Field.Index.NO));
 	}
 
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexFilename(final Document d,
+			final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_FILENAME, audioFile
+				.getNameWithoutExtension(), Field.Store.YES,
+				Field.Index.ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexLyrics(final Document d, final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_LYRICS, audioFile.getLyrics(),
+				Field.Store.YES, Field.Index.ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexScore(final Document d, final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_SCORE,
+				String.valueOf(audioFile.getStars()), Field.Store.YES,
+				Field.Index.NOT_ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexFrequency(final Document d,
+			final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_FREQUENCY, String.valueOf(audioFile
+				.getFrequency()), Field.Store.YES, Field.Index.NOT_ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexBitrate(final Document d,
+			final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_BITRATE, String.valueOf(audioFile
+				.getBitrate()), Field.Store.YES, Field.Index.NOT_ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexDuration(final Document d,
+			final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_DURATION, String.valueOf(audioFile
+				.getDuration()), Field.Store.YES, Field.Index.NOT_ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexGenre(final Document d, final ILocalAudioObject audioFile) {
+		indexField(d, INDEX_FIELD_GENRE,
+				audioFile.getGenre(this.unknownObjectChecker));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexYear(final Document d, final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_YEAR, audioFile.getYear(), Field.Store.YES,
+				Field.Index.NOT_ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexComposer(final Document d,
+			final ILocalAudioObject audioFile) {
+		indexField(d, INDEX_FIELD_COMPOSER, audioFile.getComposer());
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexAlbum(final Document d, final ILocalAudioObject audioFile) {
+		indexField(d, INDEX_FIELD_ALBUM,
+				audioFile.getAlbum(this.unknownObjectChecker));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexAlbumArtist(final Document d,
+			final ILocalAudioObject audioFile) {
+		indexField(d, INDEX_FIELD_ALBUM_ARTIST,
+				audioFile.getAlbumArtist(this.unknownObjectChecker));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexArtist(final Document d, final ILocalAudioObject audioFile) {
+		indexField(d, INDEX_FIELD_ARTIST,
+				audioFile.getArtist(this.unknownObjectChecker));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexTrackNumber(final Document d,
+			final ILocalAudioObject audioFile) {
+		d.add(new Field(INDEX_FIELD_TRACK_NUMBER, String.valueOf(audioFile
+				.getTrackNumber()), Field.Store.YES, Field.Index.NOT_ANALYZED));
+	}
+
+	/**
+	 * @param d
+	 * @param audioFile
+	 */
+	private void indexTitle(final Document d, final ILocalAudioObject audioFile) {
+		indexField(d, INDEX_FIELD_TITLE, audioFile.getTitle());
+	}
+
+	/**
+	 * Indexes a field using both analyzed and not analyzed forms This is
+	 * necessary to allow search numbers in text fields TODO: Find or create a
+	 * Lucene analyzer to avoid this
+	 * 
+	 * @param d
+	 * @param fieldName
+	 * @param fieldValue
+	 */
+	private void indexField(final Document d, final String fieldName,
+			final String fieldValue) {
+		d.add(new Field(fieldName, fieldValue, Field.Store.YES,
+				Field.Index.ANALYZED));
+		d.add(new Field(fieldName, fieldValue, Field.Store.YES,
+				Field.Index.NOT_ANALYZED));
+	}
 }
